tests/baselines/reference/importAttributes4.errors.txt
importAttributes4.ts(1,20): error TS2307: Cannot find module './first' or its corresponding type declarations.
importAttributes4.ts(1,34): error TS1005: '{' expected.


==== importAttributes4.ts (2 errors) ====
    import * as f from "./first" with
                       ~~~~~~~~~
!!! error TS2307: Cannot find module './first' or its corresponding type declarations.
                                     
!!! error TS1005: '{' expected.